@@ -36,8 +36,10 @@ import java.util.ArrayList;
 import java.util.Calendar;
 import java.util.Date;
 import java.util.HashMap;
+import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.ServiceLoader;
 import java.util.concurrent.Callable;
 
 import net.sf.jasperreports.engine.JREmptyDataSource;
@@ -53,7 +55,6 @@ import net.sf.jasperreports.engine.export.JRCsvExporter;
 import net.sf.jasperreports.engine.fill.JRParameterDefaultValuesEvaluator;
 import net.sf.jasperreports.engine.util.JRLoader;
 import net.sf.jasperreports.engine.xml.JRPrintXmlLoader;
-
 import org.opennms.api.reporting.ReportException;
 import org.opennms.api.reporting.ReportFormat;
 import org.opennms.api.reporting.ReportService;
@@ -67,6 +68,7 @@ import org.opennms.core.db.DataSourceFactory;
 import org.opennms.core.logging.Logging;
 import org.opennms.core.utils.DBUtils;
 import org.opennms.features.reporting.repository.global.GlobalReportRepository;
+import org.opennms.reporting.jasperreports.filter.ParameterFilter;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -87,12 +89,14 @@ public class JasperReportService implements ReportService {
 
     private GlobalReportRepository m_globalReportRepository;
 
-    /**
-     * <p>
-     * Constructor for JasperReportService.
-     * </p>
-     */
+    private final List<ParameterFilter> parameterFilters;
+
     public JasperReportService() {
+        parameterFilters = new ArrayList<>();
+        Iterator<ParameterFilter> it =  ServiceLoader.load(ParameterFilter.class).iterator();
+        while (it.hasNext()) {
+            parameterFilters.add(it.next());
+        }
     }
 
     /**
@@ -117,17 +121,9 @@ public class JasperReportService implements ReportService {
             return Logging.withPrefix(LOG4J_CATEGORY, new Callable<ReportParameters>() {
                 @Override public ReportParameters call() throws Exception {
                     final ReportParameters reportParameters = new ReportParameters();
+                    final JasperReport jasperReport = getJasperReport(reportId);
+                    final Map<String, Object> defaultValues = JRParameterDefaultValuesEvaluator.evaluateParameterDefaultValues(jasperReport, new HashMap<>());
 
-                    JasperReport jasperReport = null;
-                    Map<String, Object> defaultValues = null;
-
-                    try {
-                        jasperReport = JasperCompileManager.compileReport(m_globalReportRepository.getTemplateStream(reportId));
-                        defaultValues = JRParameterDefaultValuesEvaluator.evaluateParameterDefaultValues(jasperReport, new HashMap<String, Object>());
-                    } catch (final JRException e) {
-                        LOG.error("unable to compile jasper report", e);
-                        throw new ReportException("unable to compile jasperReport", e);
-                    }
 
                     final JRParameter[] reportParms = jasperReport.getParameters();
 
@@ -147,17 +143,7 @@ public class JasperReportService implements ReportService {
                     reportParameters.setDateParms(dateParms);
 
                     for (final JRParameter reportParm : reportParms) {
-
-                        if (reportParm.isSystemDefined() == false) {
-
-                            if (reportParm.isForPrompting() == false) {
-                                LOG.debug("report parm {} is not for prompting - continuing", reportParm.getName());
-                                continue;
-                            } else {
-                                LOG.debug("found promptable report parm {}", reportParm.getName());
-
-                            }
-
+                        if (apply(parameterFilters, reportParm)) {
                             if (reportParm.getValueClassName().equals("java.lang.String")) {
                                 LOG.debug("adding a string parm name {}", reportParm.getName());
                                 final ReportStringParm stringParm = new ReportStringParm();
@@ -227,7 +213,7 @@ public class JasperReportService implements ReportService {
                                 if (defaultValues.containsKey(reportParm.getName()) && (defaultValues.get(reportParm.getName()) != null)) {
                                     doubleParm.setValue((Double) defaultValues.get(reportParm.getName()));
                                 } else {
-                                    doubleParm.setValue(new Double(0));
+                                    doubleParm.setValue(Double.valueOf(0));
                                 }
                                 doubleParms.add(doubleParm);
                                 continue;
@@ -297,9 +283,12 @@ public class JasperReportService implements ReportService {
                                 continue;
                             }
                             throw new ReportException("Unsupported report parameter type " + reportParm.getValueClassName());
+                        } else {
+                            LOG.debug("SKIPPING {}", reportParm.getName());
                         }
                     }
-                    return reportParameters;                }
+                    return reportParameters;
+                }
             });
         } catch (final Exception e) {
             if (e instanceof ReportException) throw (ReportException)e;
@@ -364,17 +353,7 @@ public class JasperReportService implements ReportService {
             return Logging.withPrefix(LOG4J_CATEGORY, new Callable<String>() {
                 @Override public String call() throws Exception {
                     final String baseDir = System.getProperty("opennms.report.dir");
-                    JasperReport jasperReport = null;
-
-                    final DBUtils db = new DBUtils();
-
-                    try {
-                        jasperReport = JasperCompileManager.compileReport(m_globalReportRepository.getTemplateStream(reportId));
-                    } catch (JRException e) {
-                        LOG.error("Unable to compile jasper report {}", reportId, e);
-                        throw new ReportException("Unable to compile jasperReport " + reportId, e);
-                    }
-
+                    final JasperReport jasperReport = getJasperReport(reportId);
                     final Map<String, Object> jrReportParms = buildJRparameters(reportParms, jasperReport.getParameters());
 
                     // Find sub reports and provide sub reports as parameter
@@ -385,6 +364,7 @@ public class JasperReportService implements ReportService {
 
                     try {
                         if ("jdbc".equalsIgnoreCase(m_globalReportRepository.getEngine(reportId))) {
+                            final DBUtils db = new DBUtils();
                             try {
                                 final Connection connection = DataSourceFactory.getInstance().getConnection();
                                 db.watch(connection);
@@ -421,7 +401,7 @@ public class JasperReportService implements ReportService {
      * @param mainReport   JasperReport a compiled main report
      * @return a sub report parameter map as {@link java.util.HashMap<String,Object>} object
      */
-    private Map<String, Object> buildSubreport(final String mainReportId, final JasperReport mainReport) {
+    private Map<String, Object> buildSubreport(final String mainReportId, final JasperReport mainReport) throws ReportException {
         int idx = mainReportId.indexOf('_');
         String repositoryId = idx > -1 ? mainReportId.substring(0, idx) : "local";
         Map<String, Object> subreportMap = new HashMap<String, Object>();
@@ -436,11 +416,7 @@ public class JasperReportService implements ReportService {
 
         for (final Map.Entry<String,Object> entry : subreportMap.entrySet()) {
             final String reportId = repositoryId + "_" + entry.getKey();
-            try {
-                entry.setValue(JasperCompileManager.compileReport(m_globalReportRepository.getTemplateStream(reportId)));
-            } catch (final JRException e) {
-                LOG.debug("failed to compile report {}", reportId, e);
-            }
+            entry.setValue(getJasperReport(reportId));
         }
 
         for (final Map.Entry<String,Object> entry : subreportMap.entrySet()) {
@@ -457,15 +433,7 @@ public class JasperReportService implements ReportService {
         try {
             Logging.withPrefix(LOG4J_CATEGORY, new Callable<Void>() {
                 @Override public Void call() throws Exception {
-                    JasperReport jasperReport = null;
-
-                    try {
-                        jasperReport = JasperCompileManager.compileReport(m_globalReportRepository.getTemplateStream(reportId));
-                    } catch (final JRException e) {
-                        LOG.error("unable to compile jasper report", e);
-                        throw new ReportException("unable to compile jasperReport", e);
-                    }
-
+                    final JasperReport jasperReport = getJasperReport(reportId);
                     final Map<String, Object> jrReportParms = buildJRparameters(reportParms, jasperReport.getParameters());
                     jrReportParms.putAll(buildSubreport(reportId, jasperReport));
 
@@ -529,16 +497,10 @@ public class JasperReportService implements ReportService {
         final Map<String, Object> jrReportParms = new HashMap<String, Object>();
 
         for (final JRParameter reportParm : reportParms) {
-            LOG.debug("found report parm {} of class {}", reportParm.getValueClassName(), reportParm.getName());
-            if (reportParm.isSystemDefined() == false) {
+            if (apply(getParameterFilters(), reportParm)) {
                 final String parmName = reportParm.getName();
 
-                if (reportParm.isForPrompting() == false) {
-                    LOG.debug("Required parameter {} is not for prompting - continuing", parmName);
-                    continue;
-                }
-
-                if (onmsReportParms.containsKey(parmName) == false) {
+                if (!onmsReportParms.containsKey(parmName)) {
                     throw new ReportException("Required parameter " + parmName + " not supplied to JasperReports by OpenNMS");
                 }
 
@@ -578,7 +540,6 @@ public class JasperReportService implements ReportService {
                     jrReportParms.put(parmName, new java.sql.Timestamp(date.getTime()));
                     continue;
                 }
-
                 throw new ReportException("Unsupported report parameter type " + reportParm.getValueClassName());
             }
         }
@@ -598,5 +559,35 @@ public class JasperReportService implements ReportService {
 
     public void setGlobalReportRepository(final GlobalReportRepository globalReportRepository) {
         m_globalReportRepository = globalReportRepository;
+    }
+
+    private JasperReport getJasperReport(String reportId) throws ReportException {
+        try {
+            JasperReport report = JasperCompileManager.compileReport(m_globalReportRepository.getTemplateStream(reportId));
+            for (Object eachKey : System.getProperties().keySet()) {
+                String eachStringKey = (String) eachKey;
+                if (eachStringKey.startsWith("net.sf.jasperreports")) {
+                    report.setProperty(eachStringKey, System.getProperty(eachStringKey));
+                }
+            }
+            return report;
+        } catch (final JRException e) {
+            LOG.error("unable to compile jasper report {}", e);
+            throw new ReportException("unable to compile jasperReport", e);
+        }
+    }
+
+    protected boolean apply(List<ParameterFilter> parameterFilters, JRParameter reportParm) {
+        LOG.debug("Found report parameter {} (isSystemDefined(){}, isForPrompting()={}", reportParm.getName(), reportParm.isSystemDefined(), reportParm.isForPrompting());
+        for (ParameterFilter eachFilter : parameterFilters) {
+            if (!eachFilter.apply(reportParm)) {
+                return false;
+            }
+        }
+        return true;
+    }
+
+    protected List<ParameterFilter> getParameterFilters() {
+        return parameterFilters;
     }
 }
